syntax = "proto3";

package get_usdt;

option go_package = "../pb";

service GetUsdt {
    rpc GetRates(GetRatesRequest) returns (GetRatesResponse);
}

message GetRatesRequest {
    string market = 1;
}

message GetRatesResponse {
    message Candle {
        string price = 1;
        string volume = 2;
        string amount = 3;
        string factor = 4;
        string type = 5;
    }

    int64 timestamp = 1;
    Candle ask = 2;
    Candle bid = 3;
}